--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vite": "^4.1.1"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "nanoid": "^5.0.2",
     "react-javascript": "file:",
     "react-router-dom": "^7.1.0"
